--- a/client/app/unsupported.html
+++ b/client/app/unsupported.html
@@ -6,7 +6,7 @@
   <style>
     body {
       padding-top: 100px;
-      background: #F6F8F9;
+      background: #f4f4f4;
       text-align: center;
       color: #333;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
